--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
+    <!-- Animated Background Elements -->
+    <div class="animated-background">
+        <div class="animated-grid"></div>
+        <div class="floating-shapes">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
+            <div class="shape shape-6"></div>
+        </div>
+        <div class="gradient-mesh"></div>
+    </div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
@@ -90,8 +104,9 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user"></i>
+                    <div class="profile-image-container">
+                        <img src="images/profile.jpg" alt="Sadam Hussain - Java Developer" class="profile-image">
+                        <div class="profile-image-border"></div>
                     </div>
                 </div>
                 <div class="about-text">
@@ -107,7 +122,7 @@
                     </p>
                     <div class="about-stats">
                         <div class="stat-item">
-                            <div class="stat-number">50+</div>
+                            <div class="stat-number">15+</div>
                             <div class="stat-label">Projects Completed</div>
                         </div>
                         <div class="stat-item">
@@ -204,13 +219,13 @@
                         <div class="skill-item">
                             <span class="skill-name">MySQL</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 87%"></div>
+                                <div class="skill-progress" style="width: 90%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <span class="skill-name">PostgreSQL</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 80%"></div>
+                                <div class="skill-progress" style="width: 10%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
