Responsive fix for all mobiles

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Sadam Hussain Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 Sadam Hussain Portfolio. All rights are reserved.</p>
             <p>Built with <i class="fas fa-heart"></i> and Java</p>
         </div>
     </footer>
