--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Java Developer Portfolio</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,20 +29,22 @@
     </div>
     
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <div class="nav-brand">Portfolio</div>
-            <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-            <div class="hamburger">
+            <a class="nav-brand navbar-brand" href="#home">Portfolio</a>
+            <button class="hamburger navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="nav-menu navbar-nav ms-auto">
+                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -53,30 +57,30 @@
             <div class="gradient-orb orb-3"></div>
         </div>
         <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
+            <div class="hero-content row g-4 align-items-center">
+                <div class="hero-text col-12 col-lg-6">
                     <h1 class="hero-title">
-                        <span class="greeting">Hello, I'm</span>
-                        <span class="name">Sadam Hussain</span>
-                        <span class="title">Java Developer</span>
+                        <span class="greeting d-block">Hello, I'm</span>
+                        <span class="name d-block">Sadam Hussain</span>
+                        <span class="title d-block">Java Developer</span>
                     </h1>
                     <p class="hero-description">
                         Passionate about building robust, scalable applications using Java and modern frameworks. 
                         Transforming ideas into elegant solutions.
                     </p>
-                    <div class="hero-buttons">
-                        <a href="#projects" class="btn btn-primary">View My Work</a>
-                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                    <div class="hero-buttons d-flex flex-column flex-sm-row gap-3 mb-4">
+                        <a href="#projects" class="btn btn-primary flex-fill flex-sm-grow-0">View My Work</a>
+                        <a href="#contact" class="btn btn-secondary flex-fill flex-sm-grow-0">Get In Touch</a>
                     </div>
-                    <div class="social-links">
+                    <div class="social-links d-flex gap-3 justify-content-center justify-content-lg-start">
                         <a href="#" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="social-link"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="hero-image">
-                    <div class="code-snippet">
+                <div class="hero-image col-12 col-lg-6 d-flex justify-content-center">
+                    <div class="code-snippet w-100">
                         <div class="code-header">
                             <span class="code-dot red"></span>
                             <span class="code-dot yellow"></span>
@@ -102,14 +106,14 @@
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <div class="about-content">
-                <div class="about-image">
+            <div class="about-content row g-4 align-items-center">
+                <div class="about-image col-12 col-md-4 d-flex justify-content-center">
                     <div class="profile-image-container">
-                        <img src="images/profile.jpg" alt="Sadam Hussain - Java Developer" class="profile-image">
+                        <img src="images/profile.jpg" alt="Sadam Hussain - Java Developer" class="profile-image img-fluid">
                         <div class="profile-image-border"></div>
                     </div>
                 </div>
-                <div class="about-text">
+                <div class="about-text col-12 col-md-8">
                     <p class="about-description">
                         I'm a dedicated Java developer with a passion for creating efficient, maintainable, 
                         and scalable software solutions. With expertise in Java, Spring Framework, and modern 
@@ -120,16 +124,16 @@
                         and a deep understanding of object-oriented programming principles. I'm always eager 
                         to learn new technologies and contribute to meaningful projects.
                     </p>
-                    <div class="about-stats">
-                        <div class="stat-item">
+                    <div class="about-stats row g-3 g-md-4">
+                        <div class="stat-item col-12 col-sm-4">
                             <div class="stat-number">15+</div>
                             <div class="stat-label">Projects Completed</div>
                         </div>
-                        <div class="stat-item">
+                        <div class="stat-item col-12 col-sm-4">
                             <div class="stat-number">3+</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
-                        <div class="stat-item">
+                        <div class="stat-item col-12 col-sm-4">
                             <div class="stat-number">100%</div>
                             <div class="stat-label">Client Satisfaction</div>
                         </div>
@@ -143,8 +147,8 @@
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">Technical Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-category">
+            <div class="skills-grid row g-5 justify-content-center">
+                <div class="skill-category col-12 col-sm-6 col-md-4 col-lg-3">
                     <h3 class="skill-category-title">
                         <i class="fab fa-java"></i>
                         Core Java
@@ -177,7 +181,7 @@
                     </div>
                 </div>
 
-                <div class="skill-category">
+                <div class="skill-category col-12 col-sm-6 col-md-4 col-lg-3">
                     <h3 class="skill-category-title">
                         <i class="fas fa-leaf"></i>
                         Frameworks
@@ -210,7 +214,7 @@
                     </div>
                 </div>
 
-                <div class="skill-category">
+                <div class="skill-category col-12 col-sm-6 col-md-4 col-lg-3">
                     <h3 class="skill-category-title">
                         <i class="fas fa-database"></i>
                         Database & Tools
@@ -250,8 +254,8 @@
     <section id="projects" class="projects">
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
+            <div class="projects-grid row g-5 justify-content-center">
+                <div class="project-card col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="project-image">
                         <div class="project-overlay">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -275,7 +279,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="project-image">
                         <div class="project-overlay">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -299,7 +303,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="project-image">
                         <div class="project-overlay">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -323,7 +327,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card col-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="project-image">
                         <div class="project-overlay">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
@@ -354,8 +358,8 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-info">
+            <div class="contact-content row g-4">
+                <div class="contact-info col-12 col-lg-6">
                     <h3 class="contact-title">Let's Connect</h3>
                     <p class="contact-description">
                         I'm always open to discussing new projects, creative ideas, or opportunities 
@@ -391,7 +395,7 @@
                         <a href="#" class="social-icon"><i class="fab fa-stack-overflow"></i></a>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm">
+                <form class="contact-form col-12 col-lg-6" id="contactForm">
                     <div class="form-group">
                         <input type="text" id="user_name" name="user_name" class="form-input" placeholder="Your Name" required>
                         <span class="error-message" id="name-error"></span>
@@ -428,6 +432,8 @@
         </div>
     </footer>
 
+    <!-- Bootstrap 5 JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
